--- a/app/src/main/res/layout/recycler_messages.xml
+++ b/app/src/main/res/layout/recycler_messages.xml
@@ -11,19 +11,33 @@
         android:id="@+id/msg_image"
         android:layout_width="80dp"
         android:layout_height="80dp"/>
+    <TextView
+        android:id="@+id/message_sender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sender"
+        android:layout_toRightOf="@+id/msg_image"
+        android:layout_toEndOf="@+id/msg_image"
+        android:textSize="20sp"
+        android:textColor="#000"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        />
+
 
     <TextView
         android:id="@+id/message_text"
-        android:text="Message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/msg_image"
         android:layout_toRightOf="@+id/msg_image"
-        android:textColor="#000"
+        android:text="Message"
+        android:layout_below="@+id/message_sender"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:textSize="17sp"
         />
 
 </RelativeLayout>
