--- a/app/src/main/res/layout/activity_message_chat.xml
+++ b/app/src/main/res/layout/activity_message_chat.xml
@@ -13,6 +13,8 @@
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/layout_messageArea"
+        android:layout_marginBottom="75dp"
         tools:layout_editor_absoluteX="29dp" />
 
     <View
