--- a/app/src/main/res/layout/activity_home_messages.xml
+++ b/app/src/main/res/layout/activity_home_messages.xml
@@ -13,4 +13,16 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <Button
+        android:id="@+id/new_message"
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="33dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/roundbutton"
+        android:text="New"
+        android:textColor="#ffffff" />
 </RelativeLayout>
