--- a/app/src/main/res/layout/activity_home_messages.xml
+++ b/app/src/main/res/layout/activity_home_messages.xml
@@ -16,13 +16,14 @@
 
     <Button
         android:id="@+id/new_message"
-        android:layout_width="65dp"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="33dp"
         android:layout_marginBottom="35dp"
-        android:background="@drawable/roundbutton"
-        android:text="New"
-        android:textColor="#ffffff" />
+        android:background="@drawable/round_button"
+        android:text="+"
+        android:textColor="#ffffff"
+        android:textSize="36sp" />
 </RelativeLayout>
