--- a/app/src/main/res/layout/activity_home_messages.xml
+++ b/app/src/main/res/layout/activity_home_messages.xml
@@ -20,10 +20,10 @@
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="33dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/round_button"
-        android:text="+"
+        android:text="@string/button_newContact"
         android:textColor="#ffffff"
         android:textSize="36sp" />
 </RelativeLayout>
