--- a/app/src/main/res/layout/activity_message_chat.xml
+++ b/app/src/main/res/layout/activity_message_chat.xml
@@ -39,25 +39,25 @@
 
         <EditText
             android:id="@+id/txtMessage"
-            android:hint="Enter message"
-            android:background="@android:color/transparent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:maxLines="6"/>
+            android:background="@android:color/transparent"
+            android:hint="@string/prompt_enterMesssage"
+            android:maxLines="6" />
 
         <Button
             android:id="@+id/btnSend"
-            android:text="SEND"
-            android:textSize="14dp"
-            android:clickable="true"
             android:layout_width="64dp"
             android:layout_height="48dp"
+            android:layout_gravity="bottom"
+            android:clickable="true"
             android:gravity="center"
-            android:layout_gravity="bottom" />
+            android:text="@string/button_send"
+            android:textSize="14dp" />
 
 
     </LinearLayout>
