alert dialog box for deleting messages
alert dialog box added to both button and holding down a message. Button look changed

--- a/app/src/main/res/layout/recycler_messages.xml
+++ b/app/src/main/res/layout/recycler_messages.xml
@@ -42,11 +42,11 @@
 
     <Button
         android:id="@+id/remove_button"
+        android:background="@drawable/ic_close_black_24dp"
         android:layout_width="33dp"
-        android:layout_height="37dp"
+        android:layout_height="33dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="14dp"
-        android:text="Button" />
+        android:layout_marginEnd="14dp" />
 
 </RelativeLayout>
