Minor layout changes
Adds toast message to user not found

--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -10,17 +10,13 @@
 
         <EditText
             android:id="@+id/nickname"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
+            android:hint="@string/prompt_enterNickname"
             android:inputType="textPersonName"
-            android:text="Nickname" />
-
-        <Button
-            android:id="@+id/nicknameButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Submit Nickname" />
+            android:textAlignment="center"
+            android:importantForAutofill="no" />
 
         <ProgressBar
             android:id="@+id/nicknameProgress"
@@ -31,12 +27,16 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/nicknameButton"
         android:layout_width="match_parent"
-        android:text="text"
-        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:text="@string/button_enter" />
+
+    <TextView
         android:id="@+id/nicknameMessage"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center" />
 
 </LinearLayout>
