--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -12,27 +12,25 @@
     -->
     <TextView
         android:id="@+id/txtMyMessage"
-        android:text="Hi, my message"
-        android:background="@drawable/sender_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/sender_bubble"
+        android:elevation="5dp"
         android:maxWidth="240dp"
         android:padding="15dp"
-        android:elevation="5dp"
         android:textColor="#ffffff"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtMyMessageTime"
-        android:text="12:00 PM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:textStyle="bold"
         android:layout_marginRight="10dp"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/txtMyMessage"
         app:layout_constraintRight_toLeftOf="@+id/txtMyMessage" />
 
@@ -41,26 +39,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:background="@drawable/receiving_bubble"
         android:elevation="5dp"
         android:maxWidth="240dp"
         android:padding="15dp"
-        android:text="Hi, John's message"
         android:textColor="#ffffff"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtOtherMessageTime"
-        android:text="12:00 PM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/txtOtherMessage"
         android:layout_marginLeft="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtOtherMessage" />
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/txtOtherMessage"
+        app:layout_constraintLeft_toRightOf="@+id/txtOtherMessage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
