some layout changes
flipped corners on message bubbles, ConversationActivity, new conversations now appear at the top of the Activity and now long messages are one line with ellipses.

--- a/app/src/main/res/drawable/receiving_bubble.xml
+++ b/app/src/main/res/drawable/receiving_bubble.xml
@@ -4,6 +4,6 @@
 
     <solid android:color="#808080"></solid>
 
-    <corners  android:topLeftRadius="5dp" android:radius="40dp"></corners>
+    <corners  android:bottomLeftRadius="5dp" android:radius="40dp"></corners>
 
 </shape>
