--- a/app/src/main/res/layout/recycler_messages.xml
+++ b/app/src/main/res/layout/recycler_messages.xml
@@ -30,6 +30,8 @@
         android:id="@+id/message_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
