--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectedConversationActivity">
+    tools:context=".messages.SelectedConversationActivity">
 
     <TextView
         android:id="@+id/texView"
